--- a/packages/monorepo-example-module-b/package.json
+++ b/packages/monorepo-example-module-b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "monorepo-example-module-core": "^1.0.0-alpha.0"
+    "cross-env": "^6.0.3",
+    "monorepo-example-module-core": "^0.3.0"
   },
   "keywords": [
     "lerna-b"
