--- a/packages/monorepo-example-module-core/package.json
+++ b/packages/monorepo-example-module-core/package.json
@@ -1,11 +1,14 @@
 {
   "name": "monorepo-example-module-core",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cross-env": "^6.0.3"
+  }
 }
