--- a/packages/monorepo-example-module-core/package.json
+++ b/packages/monorepo-example-module-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monorepo-example-module-core",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^6.0.3"
-  }
+  },
+  "gitHead": "442537936b3ecc30691c8a5147f37ee130d68d6e"
 }
