--- a/packages/monorepo-example-module-a/package.json
+++ b/packages/monorepo-example-module-a/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "cross-env": "^6.0.3",
-    "monorepo-example-module-core": "^0.3.1"
+    "cross-env": "^6.0.3"
   },
   "author": "",
   "license": "ISC",
