--- a/lerna.json
+++ b/lerna.json
@@ -24,6 +24,9 @@
         "# We ignore every JSON file, except for built-in-modules, built-ins and plugins defined in babel-preset-env/data.",
         "@(!(built-in-modules|built-ins|plugins|package)).json"
       ]
+    },
+    "version": {
+      "conventionalCommits": true
     }
   }
 }
