--- a/lerna.json
+++ b/lerna.json
@@ -18,7 +18,8 @@
   "command": {
     "publish": {
       "ignoreChanges": [
-        "*.md"
+        "*.md",
+        "*.json"
       ]
     }
   }
