--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "c": "git-cz"
+    "cz": "git-cz"
   },
   "config": {
     "commitizen": {
