--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "devDependencies": {
     "commitizen": "^4.0.3",
     "cz-lerna-changelog": "^2.0.2",
-    "lerna": "^3.17.0",
-    "lerna-changelog": "^0.8.2"
+    "lerna": "^3.17.0"
   }
 }
