--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     }
   },
   "devDependencies": {
+    "commitizen": "^4.0.3",
+    "cz-lerna-changelog": "^2.0.2",
     "lerna": "^3.18.1",
     "lerna-changelog": "^0.8.2"
   }
