--- a/packages/module-a/package.json
+++ b/packages/module-a/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "monorepo-example-module-core",
-  "version": "0.1.8",
+  "name": "module-a",
+  "version": "0.1.6",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cross-env": "^6.0.3"
   },
-  "gitHead": "863350fe9ef558a9b9b616b13b4f9d1275c9dcbe"
+  "author": "",
+  "license": "ISC",
+  "gitHead": "6adcfc6032b9ecb681d6c13d7ca9dc647e8f7595"
 }
